Fixed spacing bug. Gave a nicer color to the left shadow.

--- a/pychess/output/style.css
+++ b/pychess/output/style.css
@@ -149,14 +149,15 @@ p { margin-bottom: 0.3em; }
 #navlist:after {
   content: url(/images/bar_slice_right.png);
   float: right;
+  height: 38px;
 }
 #content {
-  background: transparent url(/images/shadow_sides.png) repeat-y;
+  background: transparent url(/images/left_shadow.png) no-repeat;
   clear: both;
   display: block;
   padding: 30px 50px 80px 50px;
   width: 750px;
-  margin: -5px auto 0 auto;
+  margin: 0 auto 0 auto;
 }
 #footer {
   background: transparent url(/images/shadow_footer.png) no-repeat;
